<resources>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="parse_app_id">QdwF666zm76ORQcn4KF6JNwDfsb6cj97QunbpT1s</string>
    <string name="parse_client_key">OiJI3KdONEN9jML6Mi6r6iQTpR8mIOBv3YgsUhdv</string>
    <string name="familyAndSpace">משפחת</string>
    <string name="apartment">דירה</string>
    <string-array name="array_main_menu">
        <item>@drawable/backg</item>
        <item>@drawable/backg</item>
        <item>@drawable/backg</item>
        <item>@drawable/backg</item>
        <item>@drawable/backg</item>
    </string-array>
    <string name="app_name">הועד שלי</string>
    <string name="no_notices">אין מודעות בלוח</string>
    <string name="join_building_text">הצטרף לבניין</string>
    <string name="apartment_number_text">מספר דירה</string>
    <string name="problem_text">קרתה תקלה אנא נסה/י שנית</string>
    <string name="family">משפחת</string>
    <string name="image_desc">Image</string>
    <string name="signup_btn">הירשם</string>
    <string name="hello_user">שלום</string>
    <string name="username">שם משתמש</string>
    <string name="password">סיסמה</string>
    <string name="login">התחבר</string>
    <string name="fullname">שם משפחה</string>
    <string name="chooseImg">בחר תמונה</string>
    <string name="email">אימייל</string>
    <string name="cantDeleteMessage">אינך יכול למחוק הודעה זו</string>
    <string name="password2">הכנס סיסמא שוב</string>
    <string name="buildingcodestring">קוד בניין:</string>
    <string name="no_internet_connection_msg">אין חיבור לרשת</string>
    <string name="empty_edittext_msg">אנא מלא/י את כל השדות</string>
    <string name="cant_use_hebrew_username">שם המשתמש יכול להכיל אותיות באנגלית קו-תחתון ומספרים בלבד</string>
    <string name="password_short">הסיסמה חייבת להכיל לפחות 6 תווים ועד 20 תווים</string>
    <string name="street">רחוב</string>
    <string name="home_number">מספר בית</string>
    <string name="paypal_account">אימייל פיי-פל לקבלת תשלומים</string>
    <string name="home_number2">כניסה</string>
    <string name="home_number2text">כניסה</string>
    <string name="must_fildes">* (שדות חובה)</string>
    <string name="must_street">נא להזין רחוב</string>
    <string name="must_home_number">נא להזין מספר בית</string>
    <string name="must_city">נא לבחור עיר</string>
    <string name="must_num_houses">נא לציין מספר דיירים</string>
    <string name="must_num_appartment">נא לרשום מספר דירה</string>
    <string name="treating">בטיפול</string>
    <string name="notTreated">לא טופל</string>
    <string name="wait">טוען… אנא המתן</string>
    <string name="login_problem_text">שגיאת התחברות, נסה שוב מאוחר יותר</string>
    <string name="passwordVerifyText">סיסמאות לא תואמות</string>
    <string name="login_username_input_verify">אנא הכנס/י שם משתמש</string>
    <string name="login_password_input_verify">אנא הכנס/י סיסמא</string>
    <string name="building_code_exists_error">אופס! קרתה שגיאה אנא נסה/י שנית</string>
    <string name="not_in_b_msg1">הודעה: אינך שייך לבניין</string>
    <string name="not_in_b_msg2">אנא בחר באחת מהאפשרויות:</string>
    <string name="forgot_password">שכחת את הסיסמה? לחץ/י כאן</string>
    <string name="b_code_input_hint">הכנס/י קוד בניין</string>
    <string name="b_code_less_nums">קוד בניין חייב להכיל 6 ספרות בלבד!</string>
    <string name="logoutActionBar">התנתק</string>
    <string name="openNavigationDrawer">תפריט</string>
    <string name="about">אודות</string>
    <string name="trash_btn">מחק מודעות</string>
    <string name="signup_succeed">ההרשמה בוצעה בהצלחה</string>
    <string name="enterSum">הכנס סכום</string>
    <string name="numberOfHouses">מספר דיירים</string>
    <string name="about_dialog_title">אודות הועד שלי</string>
    <string name="ok">אישור</string>
    <string name="about_dialog_design">עיצוב: דניאל משרקי ואיתי ספקטור.</string>
    <string name="about_dialog_content">אפליקציה לניהול ועד בית בצורה חכמה ויעילה. תשלומי ועד בית, לוח מודעות, קבלת התראות, דיווח תקלות ועוד.</string>
    <string name="about_dialog_code">פיתוח:</string>
    <string name="about_dialog_shlomi">- שלומי פרסקו</string>
    <string name="about_dialog_itay">- איתי ספקטור</string>
    <string name="about_dialog_daniel">- דניאל משרקי</string>
    <string name="about_dialog_icons">Icons By: www.icons8.com</string>
    <string name="about_dialog_divider">----------</string>
    <string name="about_dialog_version">גרסא 1.0.0</string>
    <string name="about_dialog_r">כל הזכויות שמורות לועד שלי © 2015</string>
    <string name="delete_user">אתה עומד למחוק את</string>
    <string name="are_you_sure">האם אתה בטוח?</string>
    <string name="no_users">אין דיירים בבניין</string>
    <string name="appartment">דירה</string>
    <string name="no_failures">אין תקלות</string>
    <string name="vaad_bait_payments">תשלומי ועד</string>
    <string name="general_payments">כללי</string>
    <string name="year">שנה</string>
    <string name="no_vaad_bait_payments">אין תשלומים לשנת</string>
    <string name="_no_payments">אין תשלומים</string>
    <string name="month">תשלום &#xA; חודשי (&#x20AA;)</string>
    <string name="no_payments">אין הוצאות</string>
    <string name="vaad_bait">ועד בית</string>
    <string name="vaad_bait_exists">קיימים תשלומי ועד לשנה זאת</string>
    <string name="keep_changes">שמור שינויים</string>
    <string name="change_password">שנה סיסמה</string>
    <string name="update">עדכן</string>
    <string name="vaad_bait_title">תשלומי ועד בית</string>
    <string name="mark_all">סמן הכל</string>
    <string name="save">שמור</string>
    <string name="next">המשך</string>
    <string name="vaad_bait_success">תשלומים נוספו בהצלחה</string>
    <string name="clean">נקה הכל</string>
    <string name="multiple_choice">בחירה מרובה</string>
    <string name="delete_all_payments">מחיקת כל התשלומים</string>
    <string name="send_notice">התראה לכל מי שלא שילם</string>
    <string name="send_notice_dialog_content">שלח התראה לכל מי שלא שילם?</string>
    <string name="move_to_expenses_content">להעביר תשלום לפירוט הוצאות?</string>
    <string name="delete_payment_content">האם אתה בטוח שאתה רוצה להסיר את התשלום?</string>
    <string name="pay_with_paypal">שלם באמצעות פייפל או כרטיס אשראי</string>
    <string name="no_paypal_message">טרם הוזנו פרטי חשבון ועד בית לתשלום</string>
    <string name="close">סגור</string>
    <string name="pay_all">שלם הכל?</string>
    <string name="total_pay">ועד בית - תשלום כולל</string>
    <string name="choose_year">בחר שנה</string>
    <string name="delete_vaad_bait_payments">מחק תשלומי ועד לשנת</string>
    <string name="_month">חודש</string>
    <string name="add_expense">הוסף הוצאה</string>
    <string name="choose_type">בחר סוג:</string>
    <string-array name="payment_types_list">
        <item>הוצאה שוטפת</item>
        <item>הוצאה חריגה</item>
    </string-array>
    <string-array name="payment_types">
        <item>regular</item>
        <item>extra</item>
    </string-array>
    <string name="no_year_found">לא נמצאו תשלומים לשנה זו</string>
    <string name="send_notification_vaad">שלח התראה לכל מי שלא שילם את כל התשלומים לשנת</string>
    <string name="noti_success">התראה נשלחה בהצלחה</string>
    <string name="noti_failure">שליחת התראה נכשלה, אנא נסה שנית</string>
    <string name="payment_move_to_expenses">תשלום הועבר בהצלחה להוצאות</string>
    <string name="payment_not_deleted">התשלום לא נמחק, אנא נסה שנית</string>
    <string name="payment_successfully_deleted">תשלום נמחק בהצלחה</string>
    <string name="notification_msg_extra_payments">, נא לשלם את ה</string>
    <string name="notification_msg_vaad_bait">, נא לשלם את התשלומים הנותרים לשנת</string>
    <string name="message_send">שליחת הודעה</string>
    <string name="send">שלח</string>
    <string name="write_message">כתוב הודעה</string>
    <string name="join">הצטרף</string>
    <string name="close_and_move">סגור תקלה והעבר לתשלומים</string>
    <string-array name="login_page_array">
        <item>תפריט</item>
        <item>של</item>
        <item>מסך</item>
        <item>לוגין</item>
    </string-array>
    <string-array name="pages_array">
        <item>לוח מודעות</item>
        <item>לוח תקלות</item>
        <item>תשלומים</item>
        <item>הוצאות הבניין</item>
        <item>דיירים</item>
    </string-array>
    <string name="failuresDialogTitle">הוספת תקלה</string>
    <string name="failuresDialogName">שם תקלה</string>
    <string name="failuresDialogData">פירוט תקלה</string>
    <string name="failures_none">אין</string>
    <string name="failuresAddDialogTitle">הוסף הצעת מחיר</string>
    <string name="failuresAddDialogName">שם בעל מקצוע</string>
    <string name="failuresAddDialogData">מחיר</string>
    <string name="failuresApprovalDialogTitle">דיירים מאשרים</string>
    <string name="offerExists">קיימת הצעה כבר</string>
    <string name="deleteFailure">פעולה זו תגרום למחיקת התקלה. האם אתה בטוח?</string>
    <string name="edit">ערוך</string>
    <string name="noticesDialogTitle">הוספת מודעה</string>
    <string name="add_note">הוסף מודעה</string>
    <string name="add">הוסף</string>
    <string name="noticesDialogName">שם תקלה</string>
    <string name="noticesDialogData">פירוט מודעה</string>
    <string name="notices_none">אין</string>
    <string name="enter_email">אנא הכנס/י כתובת אימייל</string>
    <string name="res_pass_dialog">אפס/י סיסמא</string>
    <string name="cancel">ביטול</string>
    <string name="empty_email">אנא הכנס/י כתובת אימייל תקינה</string>
    <string name="email_sent">האימייל נשלח אנא בדוק/י דואר נכנס</string>
    <string name="noticesShowDialogTitle">הוספת מודעה</string>
    <string name="noticesShowDialogName">שם תקלה</string>
    <string name="noticesShowDialogData">פירוט מודעה</string>
    <string name="empty_notice">לא הוכנסו נתונים</string>
    <string name="delete_all_notice_dialog_text">פעולה זו תגרום למחיקת כל המודעות. האם אתה בטוח?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="myExpenses">הוצאות שלי</string>
    <string name="buildingExpenses">הוצאות בניין</string>
    <string name="shekel">₪</string>
    <string name="total">סך הכל</string>
    <string name="choose_start_date_before_end">בחר תאריך התחלה קודם לתאריך סיום</string>
    <string name="noExpenses">אין הוצאות בתקופה הנבחרת</string>
    <string name="filter">סינון</string>
    <string name="from_date">מתאריך</string>
    <string name="to_date">עד תאריך</string>
    <string name="delete_expense">מחיקת הוצאה</string>
    <string name="delete">מחק</string>
    <string name="setFilter">סנן</string>
    <string name="dialogTitle">ערוך הצעת מחיר</string>
    <string name="shekelSign">\₪ </string>
    <string name="userDialogTitle">הוספת דייר</string>
    <string name="usernameTaken">שם המשתמש קיים במערכת</string>
    <string name="emailTaken">דואר אלקטרוני קיים במערכת</string>
    <string name="InvalidEmail">איימיל לא חוקי</string>
    <string name="invalidLogInParameters">שם המשתמש או הסיסמא שגויים</string>
    <string name="error">שגיאה! אנא נסה/י שנית</string>
    <string name="SignUpScreenTitle">הרשמה</string>
    <string name="CreateBuildingTitle">הקם בניין</string>
    <string name="NoticeBoardScreenTitle">לוח מודעות</string>
    <string name="expenses_screen_ttl">פירוט הוצאות</string>
    <string name="FailuresScreenTitle">מסך תקלות</string>
    <string name="PaymentsTitle">דף תשלומים</string>
    <string name="UserProfileTitle">פרופיל משתמש</string>
    <string name="UsersScreenTitle">ניהול דיירים</string>
    <string name="NotInBuildingScreenTitle">אינך שייך לבניין</string>
    <string name="choose_city">בחר עיר</string>
</resources>