<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:layoutDirection="ltr"
    android:paddingLeft="10dp">

    <TextView
        android:id="@+id/about_desc"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="15sp"
        android:text="@string/about_dialog_version"/>
    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_below="@id/about_desc"
        android:text="@string/about_dialog_divider"/>
    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingBottom="10dp"
        android:layout_below="@id/divider"
        android:text="@string/about_dialog_content"/>
    <TextView
        android:id="@+id/copy"
        android:layout_below="@id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/about_dialog_code"/>
    <TextView
        android:id="@+id/shlomi"
        android:layout_below="@id/copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/about_dialog_shlomi"/>
    <TextView
        android:id="@+id/itai"
        android:layout_below="@id/shlomi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/about_dialog_itay"/>
    <TextView
        android:id="@+id/daniel"
        android:layout_below="@id/itai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/about_dialog_daniel"/>
    <TextView
        android:id="@+id/all_rights"
        android:layout_below="@id/daniel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/about_dialog_r"/>
    <TextView
        android:id="@+id/icons_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/all_rights"
        android:layout_marginTop="10dp"
        android:text="@string/about_dialog_icons"/>

</RelativeLayout>