<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/list_item_background">

    <TextView
        android:id="@+id/noticesDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_email"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/forgotPasswordEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/noticesDialogTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/forgotPasswordOkBtn"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/forgotPasswordEmail"
        android:layout_marginTop="10dp"
        android:text="@string/res_pass_dialog"

        />

    <Button
        android:id="@+id/forgotPasswordCancelBtn"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/forgotPasswordEmail"
        android:layout_marginTop="10dp"
        android:text="@string/cancel" />


</RelativeLayout>
