<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/list_item_background">

    <TextView
        android:id="@+id/housesDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:text="@string/numberOfHouses"
        android:textColor="@android:color/black"
        android:textSize="20sp"  />

    <net.simonvt.numberpicker.NumberPicker
        android:id="@+id/housesDialogNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/housesDialogTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:soundEffectsEnabled="true" />

    <Button
        android:id="@+id/housesDialogConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/housesDialogNumberPicker"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/housesDialogCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/housesDialogNumberPicker"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/cancel" />
</RelativeLayout>