<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:background="@drawable/dialog_margin">

    <TextView
        android:id="@+id/failuresAddDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:text="@string/dialogTitle"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/failuresAddDialogBusinessName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/failuresAddDialogTitle"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:hint="@string/failuresAddDialogName"
        android:singleLine="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/failuresAddDialogPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/failuresAddDialogBusinessName"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="הכנס סכום"
        android:inputType="number"
        android:singleLine="true" />

    <Button
        android:id="@+id/failuresAddDialogFailureOkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/failuresAddDialogPrice"
        android:layout_marginLeft="16dp"
        android:background="@drawable/default_button"
        android:minHeight="40dp"
        android:minWidth="60dp"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:enabled="false"/>
    <Button
        android:id="@+id/failuresAddDialogFailureCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/failuresAddDialogFailureOkBtn"
        android:layout_toEndOf="@id/failuresAddDialogFailureOkBtn"
        android:layout_below="@+id/failuresAddDialogPrice"
        android:layout_marginLeft="16dp"
        android:background="@drawable/default_button"
        android:minHeight="40dp"
        android:minWidth="60dp"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@id/failuresAddDialogFailureOkBtn" />
</RelativeLayout>
