<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:background="@drawable/dialog_margin">

    <TextView
        android:id="@+id/sendMessageDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:text="@string/message_send"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/sendMessageDialogName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendMessageDialogTitle"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:hint="@string/write_message"
        android:singleLine="true" />

    <Button
        android:id="@+id/sendMessageDialogConfirmBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sendMessageDialogName"
        android:background="@drawable/default_button"
        android:text="@string/send"
        android:textColor="@color/button_text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        android:enabled="false"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical|left"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/sendMessageDialogConfirmBtn"
        android:background="@color/transparent"/>


</RelativeLayout>